--- a/HTML/web/css/style.css
+++ b/HTML/web/css/style.css
@@ -8,7 +8,7 @@ body{
 
 .googlemap {
 		float: right;
-		margin-left=10%;
+		margin-left:10%;
 		width: 90%;
         height: 100%;
 		position:fixed;
@@ -26,11 +26,11 @@ body{
 
 	
 h1{
-    font-size:22px;	
+    font-size: 110%;	
     text-transform:uppercase;
 	text-align:left;
 	margin:6px;
-	padding-left:6px;
+	padding-left:0px;
 	padding-top:40px;
 }
 
@@ -40,7 +40,7 @@ h1{
 	color:white;
 	text-align:left;
 	display: inline-block;
-	font-size:14px;
+	font-size:10%;
 	text-transform:uppercase;
 	-webkit-transition-duration:0.4s;
 	transition-duration:0.4s;
@@ -169,7 +169,7 @@ h1{
 	float:right;
 	border:none;
 	display: inline-block;
-	font-size:16px;
+	font-size:15%;
 	text-transform:uppercase;
 	-webkit-transition-duration:0.4s;
 	transition-duration:0.4s;
@@ -194,11 +194,12 @@ h1{
 	height:50%;
 	width:1.5%;
 	margin-left:98.5%;
-	margin-top:25%;
+	margin-top:26%;
+	margin-bottom:0%;
 	float:right;
 	border:none;
 	display: inline-block;
-	font-size:16px;
+	font-size:15%;
 	text-transform:uppercase;
 	-webkit-transition-duration:0.4s;
 	transition-duration:0.4s;
@@ -216,14 +217,16 @@ h1{
 
 .fmenu{
 	font-size:18px;
+	font-style:bold;
+	font-weight:3000;
 	background-color: #ffffff;
     border: 1px solid grey;
-    opacity: 0.6;
+    opacity: 0.7;
 	color: black;
 	float:right;
-    filter: alpha(opacity=60); 
-	margin-left:88.5%;
-	width:10%;
+    filter: alpha(opacity=70); 
+	margin-left:86.5%;
+	width:12%;
 	height:100%;
 	position:fixed;
 	z-index:1;
@@ -234,32 +237,148 @@ h1{
 .ptab{
 	background-color: #ffffff;
     border: 1px solid grey;
-    opacity: 0.6;
+    opacity: 0.7;
 	color: black;
 	float:right;
-    filter: alpha(opacity=60); 
+    filter: alpha(opacity=70); 
 	margin-left:10%;
 	width:88.5%;
 	height:50%;
-	margin-top: 25%;
+	margin-top: 26%;
 	position:fixed;
 	z-index:1;
 	display:none;
 }
 
 .dWords{
-	margin-left:10px;
-	margin-right:50%;
+	padding-left:5px;
 	width:48%;
-	height:100%;
+	height:50%;
 	z-index:2;
 	word-wrap: break-word; 
     word-break: normal; 
+	float:left;
+	position:relative;
+	border:2px black;
 }
 
 .pgraph{
-    margin-left: 52%;
+	margin-left:47%;
+	margin-right:8%;
+	width:40%;
+	height:48%;
+    z-index:2;
+	position:fixed;
+}
 
+.plot1{
+display:none;}
+.w3-btn-floating:disabled,{cursor:not-allowed;opacity:0.3}
+.w3-btn-floating:disabled *{pointer-events:none}
+.w3-btn-floating:disabled:hover,
+.w3-btn-floating-large.w3-disabled:hover,.w3-btn-floating-large:disabled:hover{box-shadow:none}
+.w3-btn:hover,.w3-btn-block:hover,.w3-btn-floating:hover,.w3-btn-floating-large:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
+.w3-btn-block{width:100%}
+.w3-btn,.w3-btn-floating,.w3-btn-floating-large,.w3-closenav,.w3-opennav{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
+.w3-btn-floating,.w3-btn-floating-large{display:inline-block;text-align:center;color:#fff;background-color:#000;position:relative;overflow:hidden;z-index:1;padding:0;border-radius:50%;cursor:pointer;font-size:24px}
+.w3-btn-floating{width:30px;height:30px;line-height:30px}
+
+.tokens{
+	border:none;
+	font-size:14px;
+	text-align:center;
+}
+.tokens a:link, a:visited {
+    color: white;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
 }
 
 
+.tokens button{
+	background-color: #695f5f;
+    color: white;
+    width:75px;
+	height:30px;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.tokens button:hover{
+	 background-color: grey;
+}
+	
+.tokens button:after{	
+	background-color:grey;	
+}
+
+.visualization{
+	border:none;
+	font-size:14px;
+	text-align:center;
+}
+.visualization a:link, a:visited {
+    color: white;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.visualization button{
+	background-color: #695f5f;
+    color: white;
+    width:155px;
+	height:30px;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.visualization button:hover{
+	 background-color: grey;
+}
+	
+.visualization button:after{	
+	background-color:grey;	
+}
+
+
+.clearbutton{
+	padding-left:40px;
+	padding-top:50px;
+	border:none;
+	font-size:14px;
+	text-align:center;
+	float:right;
+}
+.clearbutton a:link, a:visited {
+    color: black;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.clearbutton button{
+	background-color: white;
+    color: black;
+    width:70px;
+	height:30px;
+    text-align: center;	
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.clearbutton button:hover{
+	 background-color: #c0c7aa;
+}
+	
+.clearbutton button:after{	
+	background-color:#c0c7aa;	
+}
