--- a/API/public_html/css/style.css
+++ b/API/public_html/css/style.css
@@ -1,66 +1,418 @@
-html, body, #wrapper{
-    height: 100%;
-    width: 100%;
-    margin: 0px;
+body {
+	font-family: 'Lato', Calibri, Arial, sans-serif;
+	text-align: justify;
+	background: #444;
+	color: #48A770;
+	font-weight: 300;
 }
 
-#header{
-    height: 100px;  //or whatever. Note px not %.
-    width: 100%;
+.googlemap {
+	float: right;
+	margin-left: 150px;
+	width: 90%;
+	height: 100%;
+	position: fixed;
 }
 
-#footer{
-    height: 100px;  //or whatever. Note px not %.
-    width: 100%;
+.bar {
+	background-color: #3A3434;
+	width: 150px;
+	height: 100%;
+	float: left;
+	color: white;
+	position: fixed;
 }
 
-#map-canvas{
-    height: 100%;
-    width: 100%;
+h1 {
+	font-size: 1.1em;
+	text-transform: uppercase;
+	text-align: left;
+	margin: 6px;
+	padding-left: 0px;
+	padding-top: 40px;
 }
 
-#displayWrapper{
-    position: absolute;
-    font-family: 'Roboto', sans-serif;
-    background-color: rgba(255,255,255,0.1);
-    padding: 10px;
-    font-size: 30px;
-    bottom: 50px;
-    right: 10px;
-    color: #ffffff;
+.button {
+	background-color: #3A3434;
+	border: none;
+	color: white;
+	text-align: left;
+	display: inline-block;
+	font-size: 0.85em;
+	text-transform: uppercase;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	cursor: pointer;
+	width: 100%;
+	height: 10%;
 }
 
-#displayInfo{
-    position: absolute;
-    font-family: 'Roboto', sans-serif;
-    background-color: rgba(255,255,255,0.1);
-    padding: 10px;
-    font-size: 15px;
-    bottom: 50px;
-    left: 10px;
-    color: #ffffff;
-    width: 300px; 
+.description {
+	background-color: #3A3434;
+	color: white;
+	margin-top: 50px;
+	border-top: 2px solid #C0C7AA;
 }
 
-#titleHeader{
-    position: absolute;
-    font-family: 'Roboto', sans-serif;
-    background-color: rgba(255,255,255);
-    padding: 10px;
-    font-size: 15px;
-    top: 0px;
-    width: 600px;
-    left: 30%;
-    color: #ffffff;
-    text-align: center;
-
+.description:hover {
+	background-color: #AEA8A8;
+	color: white;
 }
 
-a{
-    color: white;
-    font-style: bold;
+.desContent {
+	background-color: #FFFFFF;
+	border: none;
+	opacity: 0.8;
+	color: black;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
+	margin-top: 0px;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
 }
 
-.right{
-    float: right;
+.methodology {
+	background-color: #3A3434;
+	color: white;
+	border-top: 2px solid #C0C7AA;
+}
+
+.methodology:hover {
+	background-color: #AEA8A8;
+	color: white;
+}
+
+.methodContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
+	color: black;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
+	margin-top: 0px;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
+}
+
+.graphs {
+	background-color: #3A3434;
+	color: white;
+	border-top: 2px solid #C0C7AA;
+}
+
+.graphs:hover {
+	background-color: #AEA8A8;
+	color: white;
+}
+
+.graphsContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
+	color: black;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
+	margin-top: 0px;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
+}
+
+.data {
+	background-color: #3A3434;
+	color: white;
+	border-bottom: 2px solid #C0C7AA;
+	border-top: 2px solid #C0C7AA;
+}
+
+.data:hover {
+	background-color: #AEA8A8;
+	color: white;
+}
+
+.dataContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
+	color: black;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
+	margin-top: 0px;
+	width: 300px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
+}
+
+.rightbar{
+	background-color: #695F5F;
+	opacity: 0.7;
+	color: white;
+	filter: alpha(opacity=70);
+	border-bottom: 2px solid grey;
+	margin-left:98%;
+	margin-right:0%;
+	width:30px;
+	height:100%;
+	float:right;
+	z-index:3;
+	position:fixed;
+}
+
+.rightbar button{
+	background-color: #695F5F;
+	opacity: 0.7;
+	color: white;
+	text-align: center;
+	filter: alpha(opacity=70);
+	border-bottom: 2px solid grey;
+	height: 50%;
+	width: 100%;
+	float: right;
+	border: none;
+	display: inline-block;
+	font-size: 1em;
+	text-transform: uppercase;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	cursor: pointer;
+	position: relative;
+	font-weight:2000;
+}
+
+
+
+.rightbar  button:hover {
+	background-color: #C9C0C0;
+	color: black;
+}
+
+.filters{
+	width:100%;
+	margin-left:98%;
+    position:fixed;	
+}
+
+.plots{
+	width:100%;
+	margin-left:98%;
+	padding-top:50%;
+	position:fixed;
+}
+
+.fmenu {
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.7;
+	color: black;
+	float: right;
+	filter: alpha(opacity=70);
+	margin-left: 85%;
+	margin-right:3%;
+	width: 200px;
+	height: 100%;
+	position: fixed;
+	z-index: 2;
+	display: none;
+}
+
+.ptab {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.7;
+	color: black;
+	float: right;
+	filter: alpha(opacity=70);
+	margin-left: 150px;
+	width: 89%;
+	height: 50%;
+	margin-top: 29%;
+	position: fixed;
+	z-index: 2;
+	display: none;
+}
+
+.dWords {
+	padding-left: 170px;
+	padding-right: 30px;
+	padding-top: 10px;
+	width: 25%;
+	height: 50%;
+	z-index: 2;
+	word-wrap: break-word;
+	word-break: normal;
+	float: left;
+	position: relative;
+	border: 2px black;
+}
+
+.pgraph {
+	margin-left: 47%;
+	margin-right: 8%;
+	width: 40%;
+	height: 48%;
+	z-index: 2;
+	position: fixed;
+}
+
+.plot1 {
+	display: none;
+}
+
+.w3-btn-floating:disabled, {
+	cursor: not-allowed;
+	opacity: 0.3;
+}
+
+.w3-btn-floating:disabled * {
+	pointer-events: none;
+}
+
+.w3-btn-floating:disabled:hover, .w3-btn-floating-large.w3-disabled:hover, .w3-btn-floating-large:disabled:hover {
+	box-shadow: none;
+}
+
+.w3-btn:hover, .w3-btn-block:hover, .w3-btn-floating:hover, .w3-btn-floating-large:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.w3-btn-block {
+	width: 100%;
+}
+
+.w3-btn, .w3-btn-floating, .w3-btn-floating-large, .w3-closenav, .w3-opennav {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.w3-btn-floating, .w3-btn-floating-large {
+	display: inline-block;
+	text-align: center;
+	color: #FFF;
+	background-color: #000;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	padding: 0;
+	border-radius: 50%;
+	cursor: pointer;
+	font-size: 24px;
+}
+
+.w3-btn-floating {
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+}
+
+.tokens {
+	border: none;
+	font-size: 1em;
+	text-align: center;
+}
+
+.tokens a:link, a:visited {
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.tokens button {
+	background-color: #695F5F;
+	color: white;
+	width: 95%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.tokens button:hover {
+	background-color: grey;
+}
+
+.tokens button:after {
+	background-color: grey;
+}
+
+.visualization {
+	border: none;
+	font-size: 1em;
+	text-align: center;
+}
+
+.visualization a:link, a:visited {
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.visualization button {
+	background-color: #695F5F;
+	color: white;
+	width: 110%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.visualization button:hover {
+	background-color: grey;
+}
+
+.visualization button:after {
+	background-color: grey;
+}
+
+.clearbutton {
+	padding-left: 30px;
+	padding-top: 10%;
+	border: none;
+	font-size: 1em;
+	text-align: center;
+	float: left;
+	position:relative;
+}
+
+.clearbutton a:link, a:visited {
+	color: black;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.clearbutton button {
+	background-color: white;
+	color: black;
+	width: 100%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.clearbutton button:hover {
+	background-color: #C0C7AA;
+}
+
+.clearbutton button:after {
+	background-color: #C0C7AA;
 }
