--- a/HTML/web/css/style.css
+++ b/HTML/web/css/style.css
@@ -1,385 +1,435 @@
-body{
+body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	text-align: justify;
-	background:#444;
-	color: #48a770;
+	background: #444;
+	color: #48A770;
 	font-weight: 300;
 }
 
+.wrapper{
+margin:0;
+width:100%;	
+height:100%;
+}
+
+
 .googlemap {
-		float: right;
-		margin-left:10%;
-		width: 90%;
-        height: 100%;
-		position:fixed;
-        }
-
-.bar{
-	background-color:#3a3434;
-	width:10%;
+	float: left;
+	margin-left: 150px;
+	width: 86.5%;
+	margin-right:30px;
 	height: 100%;
-    float:left;
-	color:white;
-	position:fixed;
-	}
-	
-
-	
-h1{
-    font-size: 110%;	
-    text-transform:uppercase;
-	text-align:left;
-	margin:6px;
-	padding-left:0px;
-	padding-top:40px;
-}
-
-.button{
-	background-color: #3a3434;
+	position: fixed;
 	border:none;
-	color:white;
+}
+
+.bar {
+	background-color: #3A3434;
+	width: 150px;
+	height: 100%;
+	float: left;
+	color: white;
+	position: fixed;
+}
+
+.title{
+	padding-left:5px;
+	padding-top:40px;
 	text-align:left;
+}
+
+.title a:link {
+	color:white;
+	text-decoration:none;
+	font-weight:bold;
+	font-size: 1.1em;
+	text-transform: uppercase;
+}
+
+
+.button {
+	background-color: #3A3434;
+	border: none;
+	color: white;
+	text-align: left;
 	display: inline-block;
-	font-size:10%;
-	text-transform:uppercase;
-	-webkit-transition-duration:0.4s;
-	transition-duration:0.4s;
+	font-size: 0.85em;
+	text-transform: uppercase;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
 	cursor: pointer;
-    width: 100%;
-	height: 60px;
+	width: 100%;
+	height: 10%;
 }
 
-.description  {
-	background-color:#3a3434;
-	color:white;
-	margin-top:50px;
-	border-top:2px solid #c0c7aa;
+.description {
+	background-color: #3A3434;
+	color: white;
+	margin-top: 50px;
+	border-top: 2px solid #C0C7AA;
 }
 
-.description:hover{
-	background-color:#aea8a8;
-	color:white;
+.description:hover {
+	background-color: #AEA8A8;
+	color: white;
 }
 
-.desContent{
-	background-color: #ffffff;
-    border: none;
-    opacity: 0.8;
+.desContent {
+	background-color: #FFFFFF;
+	border: none;
+	opacity: 0.8;
 	color: black;
-    filter: alpha(opacity=80); 
-	margin-left:10%;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
 	margin-top: 0px;
-	width:1210px;
-	height:100%;
-	position:fixed;
-	z-index:1;
-	display:none;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
 }
 
-.methodology  {
-	background-color:#3a3434;
-	color:white;
-	border-top:2px solid #c0c7aa;
+.methodology {
+	background-color: #3A3434;
+	color: white;
+	border-top: 2px solid #C0C7AA;
 }
 
-.methodology:hover{
-	background-color:#aea8a8;
-	color:white;
+.methodology:hover {
+	background-color: #AEA8A8;
+	color: white;
 }
 
-.methodContent{
-	background-color: #ffffff;
-    border: 1px solid grey;
-    opacity: 0.8;
+.methodContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
 	color: black;
-    filter: alpha(opacity=80); 
-	margin-left:10%;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
 	margin-top: 0px;
-	width:1210px;
-	height:100%;
-	position:fixed;
-	z-index:1;
-	display:none;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
 }
 
-.graphs  {
-	background-color:#3a3434;
-	color:white;
-	border-top:2px solid #c0c7aa;
+.graphs {
+	background-color: #3A3434;
+	color: white;
+	border-top: 2px solid #C0C7AA;
 }
 
-.graphs:hover{
-	background-color:#aea8a8;
-	color:white;
+.graphs:hover {
+	background-color: #AEA8A8;
+	color: white;
 }
 
-.graphsContent{
-	background-color: #ffffff;
-    border: 1px solid grey;
-    opacity: 0.8;
+.graphsContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
 	color: black;
-    filter: alpha(opacity=80); 
-	margin-left:10%;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
 	margin-top: 0px;
-	width:1210px;
-	height:100%;
-	position:fixed;
-	z-index:1;
-	display:none;
+	width: 1260px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
 }
 
 .data {
-	background-color:#3a3434;
-	color:white;
-	border-bottom:2px solid #c0c7aa;
-	border-top:2px solid #c0c7aa;
+	background-color: #3A3434;
+	color: white;
+	border-bottom: 2px solid #C0C7AA;
+	border-top: 2px solid #C0C7AA;
 }
 
-.data:hover{
-	background-color:#aea8a8;
-	color:white;
+.data:hover {
+	background-color: #AEA8A8;
+	color: white;
 }
 
-.dataContent{
-	background-color: #ffffff;
-    border: 1px solid grey;
-    opacity: 0.8;
+.dataContent {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.8;
 	color: black;
-    filter: alpha(opacity=80); 
-	margin-left:10%;
+	filter: alpha(opacity=80);
+	margin-left: 150px;
 	margin-top: 0px;
-	width:300px;
-	height:100%;
-	position:fixed;
-	z-index:1;
-	display:none;
+	width: 300px;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	display: none;
 }
 
+.rightbar{
+	background-color: #695F5F;
+	opacity: 0.7;
+	color: white;
+	filter: alpha(opacity=70);
+	border-bottom: 2px solid grey;
+	right:0;
+	width:30px;
+	height:100%;
+	float:right;
+	z-index:3;
+	position:fixed;
+}
 
-.filters{
-    background-color: #695f5f;
+.rightbar button{
+	background-color: #695F5F;
 	opacity: 0.7;
 	color: white;
 	text-align: center;
-    filter: alpha(opacity=70);
-	border-bottom:2px solid grey;
-	height:50%;
-	width:1.5%;
-	margin-left:98.5%;
-	float:right;
-	border:none;
+	filter: alpha(opacity=70);
+	border-bottom: 2px solid grey;
+	height: 50%;
+	width: 100%;
+	float: right;
+	border: none;
 	display: inline-block;
-	font-size:15%;
-	text-transform:uppercase;
-	-webkit-transition-duration:0.4s;
-	transition-duration:0.4s;
+	font-size: 1em;
+	text-transform: uppercase;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
 	cursor: pointer;
-    position:fixed;
-	z-index:1;
+	position: relative;
 	font-weight:2000;
 }
 
-.filters:hover{
-	background-color:#c9c0c0;
-	color:black;
+
+
+.rightbar  button:hover {
+	background-color: #C9C0C0;
+	color: black;
+}
+
+.filters{
+	width:100%;
+	margin-left:98%;
+    position:fixed;	
 }
 
 .plots{
-    background-color: #695f5f;
+	width:100%;
+	margin-left:98%;
+	padding-top:50%;
+	position:fixed;
+}
+
+.fmenu {
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #FFFFFF;
+	border: 1px solid grey;
 	opacity: 0.7;
+	color: black;
+	float: right;
+	filter: alpha(opacity=70);
+	right:27px;
+	width: 200px;
+	height: 99%;
+	position: absolute;
+	z-index: 2;
+	display: none;
+}
+
+
+.ptab {
+	background-color: #FFFFFF;
+	border: 1px solid grey;
+	opacity: 0.7;
+	color: black;
+	float: right;
+	filter: alpha(opacity=70);
+	margin-left: 175px;
+	right:26px;
+	width: 87%;
+	height: 50%;
+	bottom:0;
+	position: absolute;
+	z-index: 2;
+	display: none;
+}
+
+.dWords {
+	padding-left: 170px;
+	padding-right: 30px;
+	padding-top: 10px;
+	width: 25%;
+	height: 50%;
+	z-index: 2;
+	word-wrap: break-word;
+	word-break: normal;
+	float: left;
+	position: relative;
+	border: 2px black;
+}
+
+.pgraph {
+	margin-left: 47%;
+	margin-right: 8%;
+	width: 40%;
+	height: 48%;
+	z-index: 2;
+	position: fixed;
+}
+
+.plot1 {
+	display: none;
+}
+
+.w3-btn-floating:disabled, {
+	cursor: not-allowed;
+	opacity: 0.3;
+}
+
+.w3-btn-floating:disabled * {
+	pointer-events: none;
+}
+
+.w3-btn-floating:disabled:hover, .w3-btn-floating-large.w3-disabled:hover, .w3-btn-floating-large:disabled:hover {
+	box-shadow: none;
+}
+
+.w3-btn:hover, .w3-btn-block:hover, .w3-btn-floating:hover, .w3-btn-floating-large:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.w3-btn-block {
+	width: 100%;
+}
+
+.w3-btn, .w3-btn-floating, .w3-btn-floating-large, .w3-closenav, .w3-opennav {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.w3-btn-floating, .w3-btn-floating-large {
+	display: inline-block;
+	text-align: center;
+	color: #FFF;
+	background-color: #000;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	padding: 0;
+	border-radius: 50%;
+	cursor: pointer;
+	font-size: 24px;
+}
+
+.w3-btn-floating {
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+}
+
+.tokens {
+	border: none;
+	font-size: 1em;
+	text-align: center;
+    padding-left:10px;
+}
+
+.tokens a:link, a:visited {
 	color: white;
 	text-align: center;
-    filter: alpha(opacity=70);
-	border-bottom:2px solid grey;
-	height:50%;
-	width:1.5%;
-	margin-left:98.5%;
-	margin-top:26%;
-	margin-bottom:0%;
-	float:right;
-	border:none;
+	text-decoration: none;
 	display: inline-block;
-	font-size:15%;
-	text-transform:uppercase;
-	-webkit-transition-duration:0.4s;
-	transition-duration:0.4s;
-	cursor: pointer;
-    position:fixed;
-	z-index:1;
-	font-weight:2000;
 }
 
-.plots:hover{
-		background-color:#c9c0c0;
-	    color:black;
+.tokens button {
+	background-color: #695F5F;
+	color: white;
+	width: 95%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
 }
 
-
-.fmenu{
-	font-size:18px;
-	font-weight:bold;
-	background-color: #ffffff;
-    border: 1px solid grey;
-    opacity: 0.7;
-	color: black;
-	float:right;
-    filter: alpha(opacity=70); 
-	margin-left:86.5%;
-	width:12%;
-	height:100%;
-	position:fixed;
-	z-index:1;
-	display:none;
+.tokens button:hover {
+	background-color: grey;
 }
 
-
-.ptab{
-	background-color: #ffffff;
-    border: 1px solid grey;
-    opacity: 0.7;
-	color: black;
-	float:right;
-    filter: alpha(opacity=70); 
-	margin-left:10%;
-	width:88.5%;
-	height:50%;
-	margin-top: 26%;
-	position:fixed;
-	z-index:1;
-	display:none;
+.tokens button:after {
+	background-color: grey;
 }
 
-.dWords{
-	padding-left:170px;
-	padding-right:30px;
-	padding-top:10px;
-	width:25%;
-	height:50%;
-	z-index:2;
-	word-wrap: break-word; 
-    word-break: normal; 
-	float:left;
-	position:relative;
-	border:2px black;
+.visualization {
+	border: none;
+	font-size: 1em;
+	text-align: center;
+	padding-left:10px;
 }
 
-.pgraph{
-	margin-left:47%;
-	margin-right:8%;
-	width:40%;
-	height:48%;
-    z-index:2;
-	position:fixed;
-}
-
-.plot1{
-display:none;}
-.w3-btn-floating:disabled,{cursor:not-allowed;opacity:0.3}
-.w3-btn-floating:disabled *{pointer-events:none}
-.w3-btn-floating:disabled:hover,
-.w3-btn-floating-large.w3-disabled:hover,.w3-btn-floating-large:disabled:hover{box-shadow:none}
-.w3-btn:hover,.w3-btn-block:hover,.w3-btn-floating:hover,.w3-btn-floating-large:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
-.w3-btn-block{width:100%}
-.w3-btn,.w3-btn-floating,.w3-btn-floating-large,.w3-closenav,.w3-opennav{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
-.w3-btn-floating,.w3-btn-floating-large{display:inline-block;text-align:center;color:#fff;background-color:#000;position:relative;overflow:hidden;z-index:1;padding:0;border-radius:50%;cursor:pointer;font-size:24px}
-.w3-btn-floating{width:30px;height:30px;line-height:30px}
-
-.tokens{
-	border:none;
-	font-size:14px;
-	text-align:center;
-}
-.tokens a:link, a:visited {
-    color: white;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
-}
-
-
-.tokens button{
-	background-color: #695f5f;
-    color: white;
-    width:75px;
-	height:30px;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
-}
-
-
-.tokens button:hover{
-	 background-color: grey;
-}
-	
-.tokens button:after{	
-	background-color:grey;	
-}
-
-.visualization{
-	border:none;
-	font-size:14px;
-	text-align:center;
-}
 .visualization a:link, a:visited {
-    color: white;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
 }
 
-
-.visualization button{
-	background-color: #695f5f;
-    color: white;
-    width:155px;
-	height:30px;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
+.visualization button {
+	background-color: #695F5F;
+	color: white;
+	width: 110%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
 }
 
-
-.visualization button:hover{
-	 background-color: grey;
-}
-	
-.visualization button:after{	
-	background-color:grey;	
+.visualization button:hover {
+	background-color: grey;
 }
 
-
-.clearbutton{
-	padding-left:40px;
-	padding-top:50px;
-	border:none;
-	font-size:14px;
-	text-align:center;
-	float:right;
+.visualization button:after {
+	background-color: grey;
 }
+
+.clearbutton {
+	padding-left: 30px;
+	padding-top: 10%;
+	border: none;
+	font-size: 1em;
+	text-align: center;
+	float: left;
+	position:relative;
+}
+
 .clearbutton a:link, a:visited {
-    color: black;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
+	color: black;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
 }
 
-
-.clearbutton button{
+.clearbutton button {
 	background-color: white;
-    color: black;
-    width:70px;
-	height:30px;
-    text-align: center;	
-    text-decoration: none;
-    display: inline-block;
+	color: black;
+	width: 100%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
 }
 
-
-.clearbutton button:hover{
-	 background-color: #c0c7aa;
+.clearbutton button:hover {
+	background-color: #C0C7AA;
 }
-	
-.clearbutton button:after{	
-	background-color:#c0c7aa;	
+
+.clearbutton button:after {
+	background-color: #C0C7AA;
 }
