--- a/HTML/web/css/style.css
+++ b/HTML/web/css/style.css
@@ -232,11 +232,13 @@ height:100%;
 	color: black;
 	float: right;
 	filter: alpha(opacity=70);
-	right:27px;
+	top:0;
+	bottom:0;
+	right:30px;
 	width: 200px;
-	height: 99%;
+	height: 99.5%;
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	display: none;
 }
 
@@ -260,13 +262,16 @@ height:100%;
 
 
 .dWords {
-	left:15%;
-	height: 80%;
+	padding-left:5%;
+	margin-top:3%;
+	height: 83%;
+	width: 40%;
 	z-index: 2;
 	word-wrap: break-word;
 	word-break: normal;
 	position: absolute;
 	float: left;
+	overflow:scroll;
 }
 
 .pgraph {
@@ -347,7 +352,7 @@ height:100%;
 	display: inline-block;
 }
 
-.tokens button {
+.tokens button{
 	background-color: #695F5F;
 	color: white;
 	width: 95%;
@@ -355,15 +360,14 @@ height:100%;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
+
 }
 
 .tokens button:hover {
 	background-color: grey;
 }
 
-.tokens button:after {
-	background-color: grey;
-}
+
 
 .visualization {
 	border: none;
@@ -397,13 +401,45 @@ height:100%;
 	background-color: grey;
 }
 
+.neighbour {
+	border: none;
+	font-size: 1em;
+	text-align: center;
+	padding-left:10px;
+}
+
+.neighbour a:link, a:visited {
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.neighbour button {
+	background-color: #695F5F;
+	color: white;
+	width: 110%;
+	height: 150%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.neighbour button:hover {
+	background-color: grey;
+}
+
+.neighbour button:after {
+	background-color: grey;
+}
+
 .clearbutton {
-	padding-left: 30px;
+	padding-right: 30px;
 	padding-top: 10%;
 	border: none;
 	font-size: 1em;
 	text-align: center;
-	float: left;
+	float: right;
 	position:relative;
 }
 
@@ -430,4 +466,32 @@ height:100%;
 
 .clearbutton button:after {
 	background-color: #C0C7AA;
+}
+
+.dtitle{
+	  width:600px;
+	  height:70px;
+	  font-size:28px;
+	  font-weight:bold;
+	  margin-left:30%;
+	  text-align:center;
+	  opacity: 0.7;
+	  color: white;
+	  filter: alpha(opacity=70);
+	  z-index:4;
+	  position:fixed;
+	  line-height:8px;
+}
+
+.describetab{
+	padding-left:5%;
+	margin-top:30%;
+	height: 25%;
+	width: 90%;
+	z-index: 3;
+	word-wrap: break-word;
+	word-break: normal;
+	position: absolute;
+	float: left;
+	overflow:scroll;
 }
