--- a/HTML/web/css/style.css
+++ b/HTML/web/css/style.css
@@ -85,8 +85,22 @@ height:100%;
 	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innerdesContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .methodology {
@@ -111,8 +125,22 @@ height:100%;
 	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innermethodContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .graphs {
@@ -137,8 +165,22 @@ height:100%;
 	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innergraphsContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .data {
@@ -164,8 +206,22 @@ height:100%;
 	width: 300px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innerdataContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .rightbar{
@@ -433,47 +489,13 @@ height:100%;
 	background-color: grey;
 }
 
-.clearbutton {
-	padding-right: 30px;
-	padding-top: 10%;
-	border: none;
-	font-size: 1em;
-	text-align: center;
-	float: right;
-	position:relative;
-}
-
-.clearbutton a:link, a:visited {
-	color: black;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.clearbutton button {
-	background-color: white;
-	color: black;
-	width: 100%;
-	height: 150%;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.clearbutton button:hover {
-	background-color: #C0C7AA;
-}
-
-.clearbutton button:after {
-	background-color: #C0C7AA;
-}
 
 .dtitle{
 	  width:600px;
 	  height:70px;
 	  font-size:28px;
 	  font-weight:bold;
-	  margin-left:30%;
+	  margin-left:450px;
 	  text-align:center;
 	  opacity: 0.7;
 	  color: white;
@@ -485,8 +507,8 @@ height:100%;
 
 .describetab{
 	padding-left:5%;
-	margin-top:30%;
-	height: 25%;
+	margin-top:8%;
+	height: 30%;
 	width: 90%;
 	z-index: 3;
 	word-wrap: break-word;
@@ -494,4 +516,255 @@ height:100%;
 	position: absolute;
 	float: left;
 	overflow:scroll;
+}
+
+.colorlegend{
+	width:150px;
+	height:250px;
+	font-size:16px;
+	font-weight:bold;
+	background-color:#695F5F;
+	margin-left:200px;
+	  margin-top:50px;
+	text-align:center;
+	opacity: 0.7;
+	color: white;
+	filter: alpha(opacity=70);
+	z-index:4;
+	position:fixed;
+	line-height:8px;
+	border-radius:15px 15px 15px 15px;
+	display:none;
+}
+
+.legendbox_1{
+	margin-top:28%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_2{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_3{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_4{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_5{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_6{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_7{
+	margin-top:4%;
+	margin-left:7%;
+	width:86%;
+	height:9%;
+	z-index:5;
+	position:relative;
+}
+
+.cbox_1{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:red;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;
+	
+}
+
+.cbox_2{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:yellow;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_3{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:green;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;
+}
+
+.cbox_4{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:blue;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_5{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:grey;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_6{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:pink;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;
+}
+
+.cbox_7{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:purple;
+	width:25%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_1 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+	
+}
+
+.tbox_2 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;		
+}
+
+.tbox_3 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_4 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_5 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_6 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+.tbox_7{
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:5%;
+	margin-bottom:5%;
+	width:60%;
+	height:60%;
+	z-index:6;
+	position:relative;	
 }
