--- a/API/public_html/img/graphs/style.css
+++ b/API/public_html/img/graphs/style.css
@@ -759,24 +759,19 @@ height:100%;
     overflow:scroll;
 }
 
-
-.container_member{
-    padding:15px;
-    margin-top:20px;
-    margin-bottom:20px;
+.member_container{
     width:100%;
-    height:160px;
-    float:left;
+    height:150px;
 }
-
-.member_photo{
+.member_container_photo{
+    width:150px;
     height:100%;
-    width:30%;
-    margin:15px;
     float:left;
     position:relative;
 }
-.member_text{
-    margin:15px;
-    margin-left:40px;
+.member_container_text{
+    padding:10px;
+    height:100%;
+    float:right;
+    position:relative;
 }
